# flix_fire_scraper

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
api/: main.py
api/models/: pydantic_models.py
api/routes/: __init__.py  health.py  scrape.py
api/scraper/: scraper.py
api/tests/integration/: test_routes.py
api/tests/unit/: test_scraper.py
terraform/: main.tf  outputs.tf  vars.tf
