[tool.poetry]
name = "flix-fire-scraper"
version = "0.1.0"
description = ""
authors = ["Mason Bassett <bassettmason@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
requests = "*"
beautifulsoup4 = "^4.12.2"
httpx = "^0.24.1"
[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
